# IsaricAnalytics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test-os-versions.yml  test-python-versions-coverage.yml
examples/datasets/covid_synthetic/: metadata.json
examples/datasets/h5nx_synthetic/: daily.csv  data_dictionary.csv  events_medication.csv  metadata.json  outcome.csv  presentation.csv
isaricanalytics/: __init__.py  logger.py  utils.py
isaricanalytics/cleaning/: encode.py  filters.py
isaricanalytics/data/: __init__.py  core.py
isaricanalytics/loader/: __init__.py  io.py
schemas/: daily.json  data_dictionary.json  events.json  metadata.json  outcome.json  presentation.json
tests/fixtures/data/: daily.csv  data_dictionary.csv  events_medication.csv  metadata.json  outcome.csv  presentation.csv
tests/unit/: test_data.py  test_loader.py
